feat: introducing claude to the repository <3